updated data annotation image, summary, and summary formatting. resolved some navbar bugs on lg screens and fixed text alignment to make paragraphs more readable

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
-#root {
-    max-width: 1280px;
+:root {
+    max-width: 100vw;
     margin: 0 auto;
     padding: 0;
     text-align: center;
+    overflow-x: hidden;
 }
 
 .logo {
